R clojisr demos running